# Grafos-RSSF

./: .gitignore  README.md  main.py  pyproject.toml
core/: graph.py  simulation.py
data/: Cenário 4 - Informações.txt
graph/: graph.py
