[tool.poetry]
name = "grafos"
version = "0.1.0"
description = ""
authors = ["Rafael Fortes <rafaeldsfortes@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
